# Lianleme

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  PRIVACY_POLICY.md  PROJECT_SUMMARY.md  README.md  TODO.md  ToSet.md  docker-compose.yml  install_config.sh  package-lock.json  package.json
.claude/: settings.local.json
.claude/hooks/: config.json
.codebuddy/rules/: AGENTS.md.mdc  CODEBUDDY.md
.github/workflows/: ci.yml
apps/admin-console/: index.html  package.json  tsconfig.json  vite.config.ts
apps/mobile-client/: index.html  package.json  vite.config.js
backend/: .env.example  Dockerfile  ENV_SETUP.md  README.md  pyproject.toml  requirements.txt
backend/alembic/: README.md  alembic.ini  env.py
backend/alembic/versions/: 0001_initial_schema.py  001_initial.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  coach.py  deps.py  plan.py  user.py  vision.py  workout.py
backend/app/api/v1/: __init__.py  ai_chat.py  auth.py  diet.py  profiles.py  stats.py  users.py  workout.py
backend/app/core/: __init__.py  ai_service.py  calculator.py  config.py  database.py  security.py  storage.py
backend/app/models/: __init__.py  chat_message.py  daily_stats.py  diet_log.py  diet_plan.py  plan.py  profile.py  record.py  user.py  workout_log.py  workout_plan.py
backend/app/schemas/: __init__.py  auth.py  chat.py  common.py  diet.py  plan.py  profile.py  stats.py  user.py  vision.py  workout.py
backend/app/services/: __init__.py
backend/app/services/ai/: __init__.py  adjust_graph.py  coach_graph.py  llm_factory.py  vision_graph.py
backend/app/services/plan/: __init__.py  plan_service.py
backend/app/services/push/: __init__.py  push_service.py
backend/app/services/user/: __init__.py  api_key_service.py  user_service.py
backend/app/services/workout/: __init__.py  workout_service.py
backend/app/templates/: index.html
backend/app/utils/: __init__.py  image_utils.py  wx_client.py
deploy/: nginx.conf
docs/architecture/: monorepo.md  runbook.md
infra/docker/: .env.example  backend-base.dockerfile  backend.dockerfile  docker-compose.deploy.yml  docker-compose.prod.yml  docker-compose.yml  python-service.Dockerfile
miniprogram/: App.vue  app.js  app.json  app.wxss  main.js  manifest.json  package.json  pages.json  project.config.json  uni.scss  vite.config.js
miniprogram/api/: index.js  request.js  settings.js
miniprogram/store/: index.js
miniprogram/utils/: api.js  auth.js  index.js
services/ai-coach-service/: README.md  pyproject.toml
services/ai-coach-service/app/: __init__.py  main.py  schemas.py
services/ai-coach-service/app/agent/: __init__.py  graph.py
services/ai-coach-service/app/agent/tools/: __init__.py  fitness_tools.py
services/ai-coach-service/app/routes/: __init__.py  internal.py
services/ai-coach-service/tests/: test_graph.py
services/api-gateway/: README.md  pyproject.toml
services/api-gateway/app/: __init__.py  clients.py  config.py  logging_config.py  main.py  schemas.py
services/api-gateway/app/routes/: __init__.py  home.py  v1.py
services/api-gateway/tests/: test_gateway.py
services/task-service/: README.md  pyproject.toml
services/task-service/app/: __init__.py  main.py  routes.py  schemas.py  worker.py
services/task-service/app/tasks/: __init__.py  jobs.py
services/task-service/tests/: test_job_worker.py
tests/: root-package-scripts.test.mjs
tests/e2e/: README.md  (+10 more)
(+101 files in other folders)
