[project]
name = "lianleme-ai-coach-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "langchain>=0.2.16",
  "langgraph>=0.2.20"
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"