[project]
name = "lianleme-task-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
  "arq>=0.25.0",
  "redis>=5.0.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"